25-network-policy/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  namespace: prod-namespace
  labels:
    role: api-pod
spec:
  containers:
  - name: api-pod
    image: some-api-image-from-docker-hub
    resources:
      limits:
        memory: "512Mi"
        cpu: "1"
    ports:
      - containerPort: 8080
