25-network-policy/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: prod-namespace
  labels:
    role: db
spec:
  containers:
  - name: db-pod
    image: postgres:alpine3.18
    resources:
      limits:
        memory: "1Gi"
        cpu: "1"
    ports:
      - containerPort: 5432
